--- a/package.json
+++ b/package.json
@@ -1,32 +1,44 @@
 {
   "name": "joystick-controller",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A JavaScript virtual joystick controller for both desktop and mobile devices.",
-  "main": "src/joystick.js",
   "scripts": {
-    "build": "webpack --config ./bundler/webpack.prod.js",
-    "dev": "webpack serve --config ./bundler/webpack.dev.js"
+    "build:commonjs": "cross-env BABEL_ENV=commonjs babel src --extensions \".js,.ts,.tsx\" --out-dir dist/lib",
+    "build:es": "babel src --extensions \".js,.ts,.tsx\" --out-dir dist/es",
+    "build:umd": "cross-env NODE_ENV=development rollup -c -o dist/umd/joystick-controller.js",
+    "build:umd:min": "cross-env NODE_ENV=production rollup -c -o dist/umd/joystick-controller.min.js",
+    "build": "npm run build:commonjs && npm run build:es && npm run build:umd && npm run build:umd:min",
+    "upload": "npm run build && npm version patch --no-commit-hooks --no-git-tag-version && npm publish"
+  },
+  "private": false,
+  "main": "dist/lib/index.js",
+  "types": "dist/es/index.d.ts",
+  "unpkg": "dist/umd/joystick-controller.min.js",
+  "module": "dist/es/index.js",
+  "files": [
+    "dist"
+  ],
+  "devDependencies": {
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-proposal-decorators": "^7.12.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
+    "@babel/plugin-transform-react-display-name": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "@microsoft/api-extractor": "^7.18.1",
+    "@rollup/plugin-babel": "^5.2.1",
+    "@rollup/plugin-commonjs": "^15.1.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/plugin-replace": "^2.3.3",
+    "rollup": "^2.32.1",
+    "rollup-plugin-terser": "^7.0.2",
+    "cross-env": "^7.0.2",
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2"
   },
   "dependencies": {
-    "@babel/core": "^7.17.10",
-    "@babel/preset-env": "^7.17.10",
-    "babel-loader": "^8.2.5",
-    "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^10.2.4",
-    "css-loader": "^6.7.1",
-    "file-loader": "^6.2.0",
-    "html-loader": "^3.1.0",
-    "html-webpack-plugin": "^5.5.0",
-    "lil-gui": "^0.16.1",
-    "mini-css-extract-plugin": "^2.6.0",
-    "portfinder-sync": "0.0.2",
-    "raw-loader": "^4.0.2",
-    "style-loader": "^3.3.1",
-    "three": "^0.140.0",
-    "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.8.1",
-    "webpack-merge": "^5.8.0"
+    "@babel/runtime": "^7.12.1"
   },
   "repository": {
     "type": "git",
@@ -41,7 +53,7 @@
     "touch-control",
     "touch-joystick"
   ],
-  "author": "Cyrus Mobini",
+  "author": "Cyrus Mobini (cyrus2281)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/cyrus2281/joystick-controller/issues"
